Added font Awesome

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f1cee466f3.js" crossorigin="anonymous"></script>
     <title>Iryna Polchaninova Portfolio</title>
 </head>
 
 <body>
-
+    <i class="fa-brands fa-instagram"></i>
 </body>
 
 </html>
