--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
 </head>
 
 <body>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+        <p>👋🏻 Hallo, I am</p>
+        <h1>Iryna Polchaninova</h1>
+        <h2 class="mb-5">Front-end developer based in Ukraine</h2>
+        <div>
+            <a href="#" class="btn btn-branding">Contact me</a>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
