--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="hero">
         <p>👋🏻 Hallo, I am</p>
         <h1>Iryna Polchaninova</h1>
-        <h2 class="mb-5">Front-end developer based in Ukraine</h2>
+        <h2 class="mb-5">Front-end developer based in 🇺🇦Ukraine</h2>
         <div>
             <a href="#" class="btn btn-branding">Contact me</a>
         </div>
