--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
 </head>
 
 <body>
-    <div class="container about-section">
+    <div class="content-container container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="about-section-content">
+                <div class="content">
                     <h1 class="mb-5">
                         👋🏻 Hi! I am Iryna Polchaninova
                     </h1>
