--- a/about.html
+++ b/about.html
@@ -22,6 +22,33 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="images/heart-logo.jpg" class="logo" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="work.html">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="content-container container">
         <div class="row">
             <div class="col-lg-6">
@@ -38,7 +65,7 @@
                         different exercises, and everything is well explained, homework and deadlines are good for keep
                         focus
                     </p>
-                    <a href="#" class="btn btn-branding">See my projects</a>
+                    <a href="work.html" class="btn btn-branding">See my projects</a>
                 </div>
             </div>
             <div class="col-lg-6">
