--- a/index.html
+++ b/index.html
@@ -22,6 +22,33 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="images/heart-logo.jpg" class="logo" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="work.html">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="hero">
         <p>👋🏻 Hallo, I am</p>
         <h1>Iryna Polchaninova</h1>
@@ -35,7 +62,7 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="/images/yogurt.png" class="img-fluid" alt="yogurt app">
+                <img src="images/yogurt.png" class="img-fluid" alt="yogurt app">
             </div>
             <div class="col">
                 <div class="project-description">
@@ -62,12 +89,12 @@
                 </div>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="/images/weather.png" class="img-fluid" alt="yogurt app">
+                <img src="images/weather.png" class="img-fluid" alt="yogurt app">
             </div>
         </div>
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="/images/dictionary.png" class="img-fluid" alt="yogurt app">
+                <img src="images/dictionary.png" class="img-fluid" alt="yogurt app">
             </div>
             <div class="col">
                 <div class="project-description">
