--- a/index.html
+++ b/index.html
@@ -108,6 +108,27 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h4>
+                        Work Inquiry
+                    </h4>
+                    <p class="text-muted">Let’s work together and i’ll help you by all my best</p>
+                </div>
+                <div>
+                    <a href="#" class="btn btn-branding mt-3">Contact me</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a href="mailto:ira.polchanin@gmail.com" class="email-link">ira.polchanin@gmail.com</a>
+            </div>
+            <div class="social-link d-flex justify-content-center">
+                <a href="https://www.instagram.com/polchaninovairina/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/IraPolchanin"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/iryna.polchaninova"> <i class="fa-brands fa-facebook"></i></a>
+            </div>
+        </footer>
     </div>
 </body>
 
