--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="About Iryna Polchaninova, an enthusiastic and detail-oriented Frontend Software Engineer seeking an entry-level position with Company to use my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.">
     <title>About Iryna Polchaninova</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,8 +26,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="images/heart-logo.jpg" class="logo" alt="">
+            <a class="navbar-brand">
+                <img src="images/heart-logo.jpg" class="logo" alt="logo-StandWithUkraine"
+                    title="Help Ukraine against Russian aggression">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,16 +37,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About</a>
+                        <a class="nav-link active" href="about.html" title="About Iryna">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="work.html">Work</a>
+                        <a class="nav-link" href="work.html" title="Iryna's work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html" title="Contact Iryna">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -65,13 +68,39 @@
                         different exercises, and everything is well explained, homework and deadlines are good for keep
                         focus
                     </p>
-                    <a href="work.html" class="btn btn-branding">See my projects</a>
+                    <a href="work.html" class="btn btn-branding" title="Iryna's work">See my projects</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <img class="img-fluid rounded" src="/images/photo_Polchaninova.jpeg" alt="photo-Iryna Polchaninova">
             </div>
         </div>
+        <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                    <h3>
+                        Work Inquiry
+                    </h3>
+                    <p class="text-muted">Let’s work together and i’ll help you by all my best</p>
+                </div>
+                <div>
+                    <a href="contact.html" class="btn btn-branding mt-3" title="Contact Iryna">Contact me</a>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:ira.polchanin@gmail.com" class="email-link">ira.polchanin@gmail.com</a>
+            </div>
+            <div class="social-link d-flex justify-content-center">
+                <a href="https://www.instagram.com/polchaninovairina/" title="Instagram Profile"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/IraPolchanin" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/iryna.polchaninova" title="Facebook Profile"> <i
+                        class="fa-brands fa-facebook"></i></a>
+            </div>
+            <p class="text-center mt-5">This project is
+                <a href="https://github.com/IraPolchanin/Portfolio-project" target="_blank">open-sourced ✌🏻</a>
+            </p>
+        </footer>
     </div>
 </body>
 
