--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iryna Polchaninova Portfolio</title>
+    <meta name="description"
+        content="Iryna Polchaninova is an enthusiastic and detail-oriented Frontend Software Engineer seeking an entry-level position with Company to use my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.">
+    <title>Front-end developer Iryna Polchaninova portfolio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -25,7 +27,8 @@
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/heart-logo.jpg" class="logo" alt="">
+                <img src="images/heart-logo.jpg" class="logo" alt="logo-StandWithUkraine"
+                    title="Help Ukraine against Russian aggression">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,16 +37,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html" title="About Iryna">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="work.html">Work</a>
+                        <a class="nav-link" href="work.html" title="Iryna's work">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html" title="Contact Iryna">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -54,7 +57,7 @@
         <h1>Iryna Polchaninova</h1>
         <h2 class="mb-5">Front-end developer based in 🇺🇦Ukraine</h2>
         <div>
-            <a href="#" class="btn btn-branding">Contact me</a>
+            <a href="contact.html" class="btn btn-branding" title="Contact Iryna">Contact me</a>
         </div>
     </div>
     <p class="text-center m-5"> Featured Project which my best projects be choice to show
@@ -62,7 +65,7 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/yogurt.png" class="img-fluid" alt="yogurt app">
+                <img src="images/yogurt.png" class="img-fluid" alt="yogurt app prewiew">
             </div>
             <div class="col">
                 <div class="project-description">
@@ -72,7 +75,7 @@
                         Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
                         coast of
                         the Semantics, a large language ocean. A small river named Duden flows by</p>
-                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                    <a href="work.html" class="btn btn-branding-outline" title="Yogurt project">Learn more</a>
                 </div>
             </div>
         </div>
@@ -85,16 +88,16 @@
                         Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
                         coast of
                         the Semantics, a large language ocean. A small river named Duden flows by</p>
-                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                    <a href="work.html" class="btn btn-branding-outline" title="Weather App">Learn more</a>
                 </div>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="images/weather.png" class="img-fluid" alt="yogurt app">
+                <img src="images/weather.png" class="img-fluid" alt="weather app prewiew">
             </div>
         </div>
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/dictionary.png" class="img-fluid" alt="yogurt app">
+                <img src="images/dictionary.png" class="img-fluid" alt="dictionary app prewiew">
             </div>
             <div class="col">
                 <div class="project-description">
@@ -104,30 +107,35 @@
                         Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
                         coast of
                         the Semantics, a large language ocean. A small river named Duden flows by</p>
-                    <a href="#" class="btn btn-branding-outline">Learn more</a>
+                    <a href="work.html" class="btn btn-branding-outline" title="Dictionary App">Learn more</a>
                 </div>
             </div>
         </div>
         <footer>
             <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
                 <div>
-                    <h4>
+                    <h3>
                         Work Inquiry
-                    </h4>
+                    </h3>
                     <p class="text-muted">Let’s work together and i’ll help you by all my best</p>
                 </div>
                 <div>
-                    <a href="#" class="btn btn-branding mt-3">Contact me</a>
+                    <a href="contact.html" class="btn btn-branding mt-3" title="Contact Iryna">Contact me</a>
                 </div>
             </div>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center mb-5">
                 <a href="mailto:ira.polchanin@gmail.com" class="email-link">ira.polchanin@gmail.com</a>
             </div>
             <div class="social-link d-flex justify-content-center">
-                <a href="https://www.instagram.com/polchaninovairina/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://github.com/IraPolchanin"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.facebook.com/iryna.polchaninova"> <i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/polchaninovairina/" title="Instagram Profile"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/IraPolchanin" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/iryna.polchaninova" title="Facebook Profile"> <i
+                        class="fa-brands fa-facebook"></i></a>
             </div>
+            <p class="text-center mt-5">This project is
+                <a href="https://github.com/IraPolchanin/Portfolio-project" target="_blank">open-sourced ✌🏻</a>
+            </p>
         </footer>
     </div>
 </body>
